@@ -583,6 +583,7 @@ INPUT                  = @top_srcdir@/Doxyheader \
                          @top_srcdir@/rpmio/ar.h \
                          @top_srcdir@/rpmio/argv.c \
                          @top_srcdir@/rpmio/argv.h \
+                         @top_srcdir@/rpmio/bzdio.c \
                          @top_srcdir@/rpmio/cpio.c \
                          @top_srcdir@/rpmio/cpio.h \
                          @top_srcdir@/rpmio/digest.c \
