@@ -124,7 +124,6 @@ static int rpm_inet_aton(const char *cp, struct in_addr *inp)
 
 #define	FDONLY(fd)	assert(fdGetIo(fd) == fdio)
 #define	GZDONLY(fd)	assert(fdGetIo(fd) == gzdio)
-#define	BZDONLY(fd)	assert(fdGetIo(fd) == bzdio)
 
 #define	UFDONLY(fd)	/* assert(fdGetIo(fd) == ufdio) */
 
@@ -536,7 +535,7 @@ DBGIO(fd, (stderr, "==> fdFdopen(%p,\"%s\") fdno %d -> fp %p fdno %d\n", cookie,
 
 /*@-type@*/ /* LCL: function typedefs */
 static struct FDIO_s fdio_s = {
-  fdRead, fdWrite, fdSeek, fdClose, NULL, NULL,
+  fdRead, fdWrite, fdSeek, fdClose, NULL, NULL, NULL,
 };
 /*@=type@*/
 
@@ -2299,7 +2298,7 @@ DBGIO(fd, (stderr, "==>\tufdOpen(\"%s\",%x,0%o) %s\n", url, (unsigned)flags, (un
 
 /*@-type@*/ /* LCL: function typedefs */
 static struct FDIO_s ufdio_s = {
-  ufdRead, ufdWrite, ufdSeek, ufdClose,	NULL, NULL,
+  ufdRead, ufdWrite, ufdSeek, ufdClose,	NULL, NULL, NULL,
 };
 /*@=type@*/
 
@@ -2372,12 +2371,12 @@ static /*@null@*/ FD_t gzdFdopen(void * cookie, const char *fmode)
     return fdLink(fd, "gzdFdopen");
 }
 
-static int gzdFlush(FD_t fd)
+static int gzdFlush(void * cookie)
 	/*@globals fileSystem @*/
 	/*@modifies fileSystem @*/
 {
-    gzFile gzfile;
-    gzfile = gzdFileno(fd);
+    FD_t fd = c2f(cookie);
+    gzFile gzfile = gzdFileno(fd);
     if (gzfile == NULL) return -2;
     return gzflush(gzfile, Z_SYNC_FLUSH);	/* XXX W2DO? */
 }
@@ -2526,7 +2525,7 @@ DBGIO(fd, (stderr, "==>\tgzdClose(%p) rc %lx %s\n", cookie, (unsigned long)rc, f
 
 /*@-type@*/ /* LCL: function typedefs */
 static struct FDIO_s gzdio_s = {
-  gzdRead, gzdWrite, gzdSeek, gzdClose,	gzdOpen, gzdFdopen,
+  gzdRead, gzdWrite, gzdSeek, gzdClose,	gzdOpen, gzdFdopen, gzdFlush,
 };
 /*@=type@*/
 
@@ -2534,197 +2533,6 @@ FDIO_t gzdio = /*@-compmempass@*/ &gzdio_s /*@=compmempass@*/ ;
 
 /*@=moduncon@*/
 #endif	/* HAVE_ZLIB_H */
-
-/* =============================================================== */
-/* Support for BZIP2 library.
- */
-#if defined(HAVE_BZLIB_H)
-/*@-moduncon@*/
-
-#include <bzlib.h>
-
-static inline /*@dependent@*/ void * bzdFileno(FD_t fd)
-	/*@*/
-{
-    void * rc = NULL;
-    int i;
-
-    FDSANE(fd);
-    for (i = fd->nfps; i >= 0; i--) {
-	FDSTACK_t * fps = &fd->fps[i];
-	if (fps->io != bzdio)
-	    continue;
-	rc = fps->fp;
-	break;
-    }
-
-    return rc;
-}
-
-/*@-globuse@*/
-static /*@null@*/ FD_t bzdOpen(const char * path, const char * fmode)
-	/*@globals fileSystem, internalState @*/
-	/*@modifies fileSystem, internalState @*/
-{
-    FD_t fd;
-    BZFILE *bzfile;
-    mode_t mode = (fmode && fmode[0] == 'w' ? O_WRONLY : O_RDONLY);
-
-    if ((bzfile = BZ2_bzopen(path, fmode)) == NULL)
-	return NULL;
-    fd = fdNew("open (bzdOpen)");
-    fdPop(fd); fdPush(fd, bzdio, bzfile, -1);
-    fdSetOpen(fd, path, -1, mode);
-    return fdLink(fd, "bzdOpen");
-}
-/*@=globuse@*/
-
-/*@-globuse@*/
-static /*@null@*/ FD_t bzdFdopen(void * cookie, const char * fmode)
-	/*@globals fileSystem, internalState @*/
-	/*@modifies fileSystem, internalState @*/
-{
-    FD_t fd = c2f(cookie);
-    int fdno;
-    BZFILE *bzfile;
-
-    if (fmode == NULL) return NULL;
-    fdno = fdFileno(fd);
-    fdSetFdno(fd, -1);		/* XXX skip the fdio close */
-    if (fdno < 0) return NULL;
-    bzfile = BZ2_bzdopen(fdno, fmode);
-    if (bzfile == NULL) return NULL;
-
-    fdPush(fd, bzdio, bzfile, fdno);		/* Push bzdio onto stack */
-
-    return fdLink(fd, "bzdFdopen");
-}
-/*@=globuse@*/
-
-/*@-globuse@*/
-static int bzdFlush(FD_t fd)
-	/*@globals fileSystem @*/
-	/*@modifies fileSystem @*/
-{
-    return BZ2_bzflush(bzdFileno(fd));
-}
-/*@=globuse@*/
-
-/* =============================================================== */
-/*@-globuse@*/
-/*@-mustmod@*/		/* LCL: *buf is modified */
-static ssize_t bzdRead(void * cookie, /*@out@*/ char * buf, size_t count)
-	/*@globals fileSystem, internalState @*/
-	/*@modifies *buf, fileSystem, internalState @*/
-{
-    FD_t fd = c2f(cookie);
-    BZFILE *bzfile;
-    ssize_t rc = 0;
-
-    if (fd->bytesRemain == 0) return 0;	/* XXX simulate EOF */
-    bzfile = bzdFileno(fd);
-    fdstat_enter(fd, FDSTAT_READ);
-    if (bzfile)
-	/*@-compdef@*/
-	rc = BZ2_bzread(bzfile, buf, (int)count);
-	/*@=compdef@*/
-    if (rc == -1) {
-	int zerror = 0;
-	if (bzfile)
-	    fd->errcookie = BZ2_bzerror(bzfile, &zerror);
-    } else if (rc >= 0) {
-	fdstat_exit(fd, FDSTAT_READ, rc);
-	/*@-compdef@*/
-	if (fd->ndigests && rc > 0) fdUpdateDigests(fd, (void *)buf, rc);
-	/*@=compdef@*/
-    }
-    return rc;
-}
-/*@=mustmod@*/
-/*@=globuse@*/
-
-/*@-globuse@*/
-static ssize_t bzdWrite(void * cookie, const char * buf, size_t count)
-	/*@globals fileSystem, internalState @*/
-	/*@modifies fileSystem, internalState @*/
-{
-    FD_t fd = c2f(cookie);
-    BZFILE *bzfile;
-    ssize_t rc;
-
-    if (fd->bytesRemain == 0) return 0;	/* XXX simulate EOF */
-
-    if (fd->ndigests && count > 0) fdUpdateDigests(fd, (void *)buf, count);
-
-    bzfile = bzdFileno(fd);
-    fdstat_enter(fd, FDSTAT_WRITE);
-    rc = BZ2_bzwrite(bzfile, (void *)buf, (int)count);
-    if (rc == -1) {
-	int zerror = 0;
-	fd->errcookie = BZ2_bzerror(bzfile, &zerror);
-    } else if (rc > 0) {
-	fdstat_exit(fd, FDSTAT_WRITE, rc);
-    }
-    return rc;
-}
-/*@=globuse@*/
-
-static inline int bzdSeek(void * cookie, /*@unused@*/ _libio_pos_t pos,
-			/*@unused@*/ int whence)
-	/*@*/
-{
-    FD_t fd = c2f(cookie);
-
-    BZDONLY(fd);
-    return -2;
-}
-
-static int bzdClose( /*@only@*/ void * cookie)
-	/*@globals fileSystem, internalState @*/
-	/*@modifies fileSystem, internalState @*/
-{
-    FD_t fd = c2f(cookie);
-    BZFILE *bzfile;
-    int rc;
-
-    bzfile = bzdFileno(fd);
-
-    if (bzfile == NULL) return -2;
-    fdstat_enter(fd, FDSTAT_CLOSE);
-    /*@-noeffectuncon@*/ /* FIX: check rc */
-    BZ2_bzclose(bzfile);
-    /*@=noeffectuncon@*/
-    rc = 0;	/* XXX FIXME */
-
-    /* XXX TODO: preserve fd if errors */
-
-    if (fd) {
-	if (rc == -1) {
-	    int zerror = 0;
-	    fd->errcookie = BZ2_bzerror(bzfile, &zerror);
-	} else if (rc >= 0) {
-	    fdstat_exit(fd, FDSTAT_CLOSE, rc);
-	}
-    }
-
-DBGIO(fd, (stderr, "==>\tbzdClose(%p) rc %lx %s\n", cookie, (unsigned long)rc, fdbg(fd)));
-
-    if (_rpmio_debug || rpmIsDebug()) fdstat_print(fd, "BZDIO", stderr);
-    if (rc == 0)
-	fd = fdFree(fd, "open (bzdClose)");
-    return rc;
-}
-
-/*@-type@*/ /* LCL: function typedefs */
-static struct FDIO_s bzdio_s = {
-  bzdRead, bzdWrite, bzdSeek, bzdClose,	bzdOpen, bzdFdopen,
-};
-/*@=type@*/
-
-FDIO_t bzdio = /*@-compmempass@*/ &bzdio_s /*@=compmempass@*/ ;
-
-/*@=moduncon@*/
-#endif	/* HAVE_BZLIB_H */
 
 /* =============================================================== */
 /*@observer@*/
@@ -3239,8 +3047,12 @@ int Fflush(FD_t fd)
 	return gzdFlush(vh);
 #endif
 #if defined(HAVE_BZLIB_H)
-    if (vh && fdGetIo(fd) == bzdio)
-	return bzdFlush(vh);
+    if (vh && fdGetIo(fd) == bzdio && bzdio->_flush != NULL)
+	return (*bzdio->_flush) ((void *)fd);
+#endif
+#if defined(HAVE_LZMA_H)
+    if (vh && fdGetIo(fd) == lzdio && lzdio->_flush != NULL)
+	return (*lzdio->_flush) ((void *)fd);
 #endif
 
     return 0;
@@ -3592,7 +3404,7 @@ void rpmioClean(void)
 
 /*@-type@*/ /* LCL: function typedefs */
 static struct FDIO_s fpio_s = {
-  ufdRead, ufdWrite, fdSeek, ufdClose, NULL, NULL,
+  ufdRead, ufdWrite, fdSeek, ufdClose, NULL, NULL, NULL,
 };
 /*@=type@*/
 
